# pandas-datacube

./: .coverage  .gitignore  Jenkinsfile  LICENCE.txt  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
exemples/notebook/: Get_DataCube.ipynb  Graphs.ipynb
htmlcov/: index.html  pandasdatacube_SPARQL_query_py.html  pandasdatacube___init___py.html  pandasdatacube_pandasdatacube_py.html  status.json  test___init___py.html  test_test_pandasdatacube_py.html
pandas-datacube/notbooks/: Test ontopsy.ipynb  Untitled.ipynb  Untitled1.ipynb  Version1.ipynb  Version2.ipynb  Version3.ipynb
pandas_datacube.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pandasdatacube/: __init__.py  pandasdatacube.py
pandasdatacube/notebook/: Get_DataCube.ipynb  Graphs.ipynb
pandasdatacube/pandas_datacube.egg-info/: PKG-INFO  SOURCES.txt
requirements/: dev.txt  prod.txt
search/: RECHERCHER.md  RECHERCHES.md  test_RDF.py  test_SPARQL.py  test_owlready2.py  test_urllib.py
search/notbooks/: Get_DataCube.ipynb  Get_data.ipynb  Test ontology with rdflib.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Version1.ipynb  Version2.ipynb  Version3.ipynb  dbnaryStatisticsCube.csv  enhancementConfidenceDataCube.csv  translationGlossesCube.csv
src/: Dataset_tools.py  SPARQL_query.py  test.py  test_RDF.py  test_requete.py
src/notebook/: Get_DataCube-Copy1.ipynb  Get_DataCube.ipynb  Graphs.ipynb
src/pandas-datacube/: Dataset_tools.py
src/pandas_datacube.egg-info/: PKG-INFO  SOURCES.txt
src/pandas_datacube_tristan.saminadayar.egg-info/: PKG-INFO  SOURCES.txt
src/pandasdatacube/: pandasdatacube.py
test/: test_pandasdatacube.py
(+2 files in other folders)
