[metadata]
name = pandas_datacube
version = 0.0.2
author = Tristan Saminadayar
author_email = tristan.saminadayar@gmail.com
description = A package allowing to download datacubes into pandas data frames
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tristansaminadayar/pandas-datacube
project_urls =
    Bug Tracker = https://github.com/tristansaminadayar/pandas-datacube/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Database


[options]
package_root =
    = pandasdatacube
packages = find:
python_requires = >=3.9

[options.packages.find]
where = pandasdatacube